# interview

./: .gitignore  .gitmodules  Build.win  CMakeLists.txt  README.md
cxxlang/: 001.initialization_list.cpp  005.lambda.cpp  006.decltype.cpp  007.enum_class.cpp  009.algo.1.nonmod.cpp  009.algo.3.del.cpp  010.thread.cpp  2.rvalue.cpp  3.constexpr.cpp  4.variadic_template.cpp  7.enum_class.cpp  8.smart_ptr.cpp  9.algo.1.nonmod.cpp  9.algo.4.permut.cpp  CMakeLists.txt  main.cpp  sort.bubble.cpp  sort.bubble.hpp  sort.impl.cpp  sort.insertion.cpp  sort.insertion.hpp  sort.selection.cpp  sort.selection.hpp
paragon/: CMakeLists.txt  partman.xml
paragon/src/: BottomWidget.hpp  DiskListView.cpp  DiskListView.hpp  DiskSummaryWidget.cpp  DiskSummaryWidget.hpp  Exception.hpp  GraphicalView.cpp  GraphicalView.hpp  GraphicalViewItem.cpp  GraphicalViewItem.hpp  MainWindow.cpp  MainWindow.hpp  Model.cpp  Model.hpp  TableView.cpp  TableView.hpp  TestModel.cpp  TestXmlModel.cpp  TopWidget.hpp  VolumeListView.cpp  VolumeListView.hpp  VolumeSummaryWidget.cpp  VolumeSummaryWidget.hpp  main.cpp
qml-demo/: CMakeLists.txt  Calculator.qmlc  Demo000.qml  Demo000.qmlc  Demo001.qml  Demo001.qmlc  README.txt  ResultStatus.hpp  Translator.hpp  main.cpp  main.qml  qml-demo.qrc  qml-demo.ts
skbkontur/: A.csv  B.csv  C.csv  D.csv  E.csv  Q.csv  Test zadanie.xlsx  skbkontur.pl
stc/: CMakeLists.txt  CalculatorForm.ui  Console.cpp  Console.hpp  DoIt.cpp  MainWindow.cpp  MainWindow.hpp  Operation.cpp  Operation.hpp  Queue.hpp  README.txt  Result.cpp  Result.hpp  Worker.cpp  Worker.hpp  main.cpp
stc-qml/: CMakeLists.txt  DoIt.cpp  DoIt.hpp  ErrorCode.hpp  calculator.qrc  main.cpp  main.qml
stc/src/: Calculator.cpp  Calculator.hpp  CalculatorForm.ui  ErrorCode.hpp  MainWindow.cpp  MainWindow.hpp  Operation.hpp  Queue.hpp  Result.hpp  Worker.hpp  main.cpp
store/: Category.hpp  main.cpp
tenzor/: main.cpp
videomatrix/: CMakeLists.txt  LICENSE.MIT
videomatrix/janitor/: CMakeLists.txt  common.hpp  config.cpp  config.txt  main.cpp  posix.hpp  win32.hpp
videomatrix/parser/: CMakeLists.txt  Rus_DriverErl-utf8.txt  main.cpp  pattern.cpp  pattern.hpp  proto.cpp  proto.hpp
videomatrix/shared/: advance.cpp  advance.hpp  platform.hpp
videomatrix/win32/janitor/: janitor.sln  janitor.vcxproj  janitor.vcxproj.filters
videomatrix/win32/janitor/Debug/: config.txt  janitor.ilk
videomatrix/win32/janitor/Debug/janitor.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  janitor.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
videomatrix/win32/parser/: parser.sln  parser.vcxproj  parser.vcxproj.filters
videomatrix/win32/parser/Debug/: Feeder3000_20070511.erl  Rus_DriverErl.txt  parser.ilk
videomatrix/win32/parser/Debug/parser.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  parser.lastbuildstate
